--- a/page1.html
+++ b/page1.html
@@ -125,6 +125,7 @@
             Emma！今天是你的生日！<br>
             希望你快乐每一天，<br>
             祝我们99：）<br>
+
             from：oo<br>
             2025/8/7
         </p>
@@ -136,6 +137,6 @@
     </div>
 
     <!-- Copyright -->
-    <div class="copyright">© oo, 2025</div>
+    <div class="copyright">© oo 2025</div>
 </body>
 </html>
