--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emma生日快乐！🎂</title>
+    <title>Emmmaaa生日快乐！</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;500;600&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
@@ -15,29 +15,27 @@
 
         body {
             font-family: 'Noto Serif SC', serif;
-            background: 
-                radial-gradient(circle at 20% 80%, rgba(139, 69, 19, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 80% 20%, rgba(160, 82, 45, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 40% 40%, rgba(210, 180, 140, 0.15) 0%, transparent 50%),
-                linear-gradient(135deg, #f0e68c 0%, #daa520 20%, #cd853f 40%, #daa520 60%, #f0e68c 100%);
+            background: url('images/56721.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
             min-height: 100vh;
             overflow-x: hidden;
-            /* 添加纸张纹理 */
-            background-image: 
-                repeating-linear-gradient(
-                    0deg,
-                    transparent,
-                    transparent 2px,
-                    rgba(139, 69, 19, 0.03) 2px,
-                    rgba(139, 69, 19, 0.03) 4px
-                ),
-                repeating-linear-gradient(
-                    90deg,
-                    transparent,
-                    transparent 2px,
-                    rgba(160, 82, 45, 0.03) 2px,
-                    rgba(160, 82, 45, 0.03) 4px
-                );
+            position: relative;
+        }
+
+        /* 添加透明度遮罩 */
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.2);
+            pointer-events: none;
+            z-index: 0;
         }
 
         /* 添加一些漂浮的灰尘粒子效果 */
@@ -50,9 +48,9 @@
             height: 100%;
             pointer-events: none;
             background-image: 
-                radial-gradient(circle at 10% 20%, rgba(139, 69, 19, 0.1) 1px, transparent 1px),
-                radial-gradient(circle at 80% 80%, rgba(160, 82, 45, 0.08) 1px, transparent 1px),
-                radial-gradient(circle at 40% 60%, rgba(210, 180, 140, 0.06) 1px, transparent 1px);
+                radial-gradient(circle at 10% 20%, rgba(139, 69, 19, 0.08) 1px, transparent 1px),
+                radial-gradient(circle at 80% 80%, rgba(160, 82, 45, 0.06) 1px, transparent 1px),
+                radial-gradient(circle at 40% 60%, rgba(210, 180, 140, 0.04) 1px, transparent 1px);
             background-size: 200px 200px, 300px 300px, 150px 150px;
             animation: floatDust 20s linear infinite;
             z-index: 1;
@@ -117,7 +115,7 @@
         }
 
         .nav-link:hover {
-            background: rgba(245, 245, 220, 0.9);
+            background: rgba(195, 195, 107, 0.9);
             transform: scale(1.05);
             box-shadow: 0 4px 15px rgba(139, 69, 19, 0.2);
             border-color: rgba(139, 69, 19, 0.4);
@@ -142,6 +140,8 @@
             display: flex;
             align-items: center;
             padding: 0 50px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         /* 左侧大泡泡 - 生日祝福 */
@@ -150,9 +150,9 @@
             height: 400px;
             border-radius: 50%;
             background: 
-                radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.9), transparent 60%),
-                radial-gradient(circle at 70% 70%, rgba(255, 248, 220, 0.7), transparent 70%),
-                linear-gradient(135deg, #f5f5dc 0%, #fff8dc 25%, #ffefd5 50%, #fdf5e6 75%, #faf0e6 100%);
+                radial-gradient(circle at 30% 30%, rgba(244, 158, 171, 0.8), transparent 60%),
+                radial-gradient(circle at 70% 70%, rgba(255, 208, 166, 0.6), transparent 70%),
+                linear-gradient(135deg, #ffb6c1 0%, #ffc0cb 25%, #ffa07a 50%, #ff69b4 75%, #dda0dd 100%);
             backdrop-filter: blur(15px);
             border: 3px solid rgba(139, 69, 19, 0.3);
             display: flex;
@@ -189,7 +189,7 @@
             left: 50%;
             transform: translateX(-50%);
             background: linear-gradient(145deg, rgba(245, 245, 220, 0.95), rgba(255, 248, 220, 0.9));
-            color: #8b4513;
+            color: #8d440f;
             padding: 15px 30px;
             border-radius: 30px;
             font-size: 1.6rem;
@@ -326,63 +326,233 @@
         }
 
         /* 响应式设计 */
+        
+        /* 平板设备 */
+        @media (max-width: 1024px) {
+            .bubbles-container {
+                padding: 0 30px;
+                flex-direction: column;
+                gap: 30px;
+            }
+
+            .main-bubble {
+                width: 300px;
+                height: 300px;
+                margin-right: 0;
+                margin-bottom: 20px;
+            }
+
+            .side-bubbles {
+                width: 600px;
+                height: 300px;
+            }
+
+            .bubble:nth-child(1) { 
+                width: 160px;
+                height: 160px;
+                top: 70px;
+                left: 20px;
+            }
+            .bubble:nth-child(2) { 
+                width: 120px;
+                height: 120px;
+                top: 30px;
+                left: 200px;
+            }
+            .bubble:nth-child(3) { 
+                width: 130px;
+                height: 130px;
+                top: 150px;
+                left: 300px;
+            }
+            .bubble:nth-child(4) { 
+                width: 110px;
+                height: 110px;
+                top: 60px;
+                left: 450px;
+            }
+        }
+
+        /* 手机设备 */
         @media (max-width: 768px) {
-            .nav-links {
+            .nav-container {
+                padding: 0 15px;
+                flex-direction: column;
                 gap: 15px;
             }
 
-            .nav-link {
-                font-size: 0.9rem;
+            .nav-logo {
+                font-size: 1.2rem;
                 padding: 6px 12px;
+            }
+
+            .nav-links {
+                gap: 10px;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .nav-link {
+                font-size: 0.8rem;
+                padding: 5px 10px;
+            }
+
+            .bubbles-container {
+                padding: 10px;
+                flex-direction: column;
+                height: auto;
+                min-height: calc(100vh - 120px);
+            }
+
+            .main-bubble {
+                width: 250px;
+                height: 250px;
+                margin: 20px 0;
+            }
+
+            .main-bubble .bubble-text {
+                font-size: 1rem;
+                padding: 8px 15px;
+                white-space: normal;
+                max-width: 200px;
+            }
+
+            .side-bubbles {
+                width: 100%;
+                max-width: 350px;
+                height: 280px;
+                margin-top: 20px;
+            }
+
+            .bubble:nth-child(1) { 
+                width: 100px;
+                height: 100px;
+                top: 20px;
+                left: 20px;
+            }
+            .bubble:nth-child(2) { 
+                width: 80px;
+                height: 80px;
+                top: 10px;
+                left: 140px;
+            }
+            .bubble:nth-child(3) { 
+                width: 85px;
+                height: 85px;
+                top: 140px;
+                left: 160px;
+            }
+            .bubble:nth-child(4) { 
+                width: 75px;
+                height: 75px;
+                top: 100px;
+                left: 260px;
+            }
+
+            .bubble i {
+                font-size: 0.9rem;
+            }
+
+            .bubble span {
+                font-size: 0.5rem;
+            }
+
+            .birthday-player {
+                top: 25px;
+                right: 12px;
+            }
+
+            .cake {
+                width: 45px;
+                height: 52px;
+            }
+
+            .cake-base {
+                width: 45px;
+                height: 25px;
+            }
+
+            .cake-layer {
+                width: 32px;
+                height: 20px;
+                left: 6px;
+                bottom: 22px;
+            }
+
+            .candle {
+                width: 3px;
+                height: 12px;
+                top: 5px;
+            }
+
+            .flame {
+                width: 5px;
+                height: 6px;
+                top: -6px;
+            }
+        }
+
+        /* 小屏手机 */
+        @media (max-width: 480px) {
+            .nav-container {
+                padding: 0 10px;
+            }
+
+            .nav-logo {
+                font-size: 1rem;
+            }
+
+            .nav-link {
+                font-size: 0.7rem;
+                padding: 4px 8px;
             }
 
             .main-bubble {
                 width: 200px;
                 height: 200px;
-                margin-right: 30px;
             }
 
             .main-bubble .bubble-text {
                 font-size: 0.9rem;
-                padding: 8px 15px;
+                padding: 6px 12px;
             }
 
             .side-bubbles {
-                width: 500px;
-                height: 350px;
+                max-width: 280px;
+                height: 250px;
             }
 
             .bubble:nth-child(1) { 
-                width: 130px;
-                height: 130px;
-                top: 60px;
-                left: 10px;
-            }
-            .bubble:nth-child(2) { 
-                width: 90px;
-                height: 90px;
-                top: 20px;
-                left: 170px;
-            }
-            .bubble:nth-child(3) { 
-                width: 100px;
-                height: 100px;
-                top: 150px;
-                left: 200px;
-            }
-            .bubble:nth-child(4) { 
                 width: 80px;
                 height: 80px;
+                top: 15px;
+                left: 15px;
+            }
+            .bubble:nth-child(2) { 
+                width: 65px;
+                height: 65px;
+                top: 10px;
+                left: 110px;
+            }
+            .bubble:nth-child(3) { 
+                width: 70px;
+                height: 70px;
+                top: 120px;
+                left: 120px;
+            }
+            .bubble:nth-child(4) { 
+                width: 60px;
+                height: 60px;
                 top: 80px;
-                left: 320px;
+                left: 200px;
             }
 
             .bubble i {
-                font-size: 1rem;
+                font-size: 0.8rem;
             }
 
             .bubble span {
-                font-size: 0.6rem;
+                font-size: 0.4rem;
             }
         }
 
@@ -446,7 +616,7 @@
         /* 生日蛋糕音乐播放器样式 */
         .birthday-player {
             position: absolute;
-            top: 15px;
+            top: 45px;
             right: 15px;
             cursor: pointer;
             z-index: 10;
@@ -461,44 +631,52 @@
 
         .cake {
             position: relative;
-            width: 60px;
-            height: 70px;
+            width: 55px;
+            height: 65px;
         }
 
         .cake-base {
             position: absolute;
             bottom: 0;
-            width: 60px;
-            height: 35px;
-            background: linear-gradient(145deg, #8b4513, #a0522d);
-            border-radius: 5px 5px 15px 15px;
+            width: 55px;
+            height: 32px;
+            background: 
+                radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.9), transparent 70%),
+                linear-gradient(145deg, #ffb6c1, #ffc0cb, #ff69b4);
+            border-radius: 8px 8px 20px 20px;
             box-shadow: 
-                0 4px 8px rgba(0, 0, 0, 0.3),
-                inset 0 2px 4px rgba(255, 255, 255, 0.2);
+                0 6px 15px rgba(255, 105, 180, 0.4),
+                inset 0 3px 6px rgba(255, 255, 255, 0.5),
+                0 0 20px rgba(255, 182, 193, 0.3);
+            border: 2px solid rgba(255, 255, 255, 0.6);
         }
 
         .cake-layer {
             position: absolute;
-            bottom: 30px;
+            bottom: 28px;
             left: 8px;
-            width: 44px;
-            height: 28px;
-            background: linear-gradient(145deg, #ffd700, #ffed4a);
-            border-radius: 3px;
+            width: 39px;
+            height: 26px;
+            background: 
+                radial-gradient(circle at 25% 25%, rgba(255, 255, 255, 0.8), transparent 60%),
+                linear-gradient(145deg, #ffffff, #fff8dc, #ffefd5);
+            border-radius: 5px;
             box-shadow: 
-                0 2px 4px rgba(0, 0, 0, 0.2),
-                inset 0 1px 2px rgba(255, 255, 255, 0.3);
+                0 3px 8px rgba(255, 105, 180, 0.3),
+                inset 0 2px 4px rgba(255, 255, 255, 0.4);
+            border: 1px solid rgba(255, 192, 203, 0.4);
         }
 
         .candle {
             position: absolute;
-            top: 10px;
+            top: 6px;
             left: 50%;
             transform: translateX(-50%);
             width: 4px;
-            height: 15px;
-            background: linear-gradient(to bottom, #ff6b6b, #ff5252);
-            border-radius: 2px;
+            height: 14px;
+            background: linear-gradient(to bottom, #ff69b4, #ffb6c1);
+            border-radius: 3px;
+            box-shadow: 0 2px 4px rgba(255, 105, 180, 0.4);
         }
 
         .flame {
@@ -506,21 +684,53 @@
             top: -8px;
             left: 50%;
             transform: translateX(-50%);
-            width: 6px;
+            width: 7px;
             height: 8px;
-            background: radial-gradient(circle, #ffeb3b 30%, #ff9800 70%);
+            background: 
+                radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.8), transparent 60%),
+                radial-gradient(circle, #ff69b4 20%, #ffb6c1 50%, #ffc0cb 80%);
             border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-            animation: flicker 1s ease-in-out infinite alternate;
+            animation: dreamFlicker 1.5s ease-in-out infinite alternate;
+            box-shadow: 0 0 10px rgba(255, 105, 180, 0.6);
         }
 
-        @keyframes flicker {
+        @keyframes dreamFlicker {
             0% { 
-                transform: translateX(-50%) scale(1) rotate(-2deg);
+                transform: translateX(-50%) scale(1) rotate(-3deg);
                 opacity: 1;
+                box-shadow: 0 0 10px rgba(255, 105, 180, 0.6);
             }
             100% { 
-                transform: translateX(-50%) scale(1.1) rotate(2deg);
-                opacity: 0.8;
+                transform: translateX(-50%) scale(1.2) rotate(3deg);
+                opacity: 0.9;
+                box-shadow: 0 0 15px rgba(255, 105, 180, 0.8);
+            }
+        }
+
+        /* 添加梦幻装饰效果 */
+        .cake::before {
+            content: '';
+            position: absolute;
+            top: -3px;
+            left: -3px;
+            right: -3px;
+            bottom: -3px;
+            background: 
+                radial-gradient(circle at 20% 20%, rgba(255, 255, 255, 0.4), transparent 40%),
+                radial-gradient(circle at 80% 80%, rgba(255, 182, 193, 0.3), transparent 50%);
+            border-radius: 12px 12px 25px 25px;
+            z-index: -1;
+            animation: dreamGlow 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes dreamGlow {
+            0% { 
+                opacity: 0.3;
+                transform: scale(1);
+            }
+            100% { 
+                opacity: 0.6;
+                transform: scale(1.05);
             }
         }
     </style>
@@ -529,7 +739,7 @@
     <!-- 导航栏 -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="nav-logo">🎂 Emma生日快乐 🎂</a>
+            <a href="https://happyeveryday.site/html/automation.html" class="nav-logo" target="_blank">🎂 Emma生日快乐 🎂</a>
             <div class="nav-links">
                 <a href="page1.html" class="nav-link">生日祝福</a>
                 <a href="page2.html" class="nav-link">美好回忆</a>
