--- a/page3.html
+++ b/page3.html
@@ -513,40 +513,94 @@
         }
 
         /* 响应式设计 */
-        @media (max-width: 768px) {
+        
+        /* 平板设备 */
+        @media (max-width: 1024px) {
             .main-container {
-                flex-direction: column;
-                padding: 10px;
-                gap: 20px;
-                height: auto;
-                min-height: 100vh;
+                padding: 20px;
+                gap: 30px;
             }
 
             .envelope {
-                width: 250px;
-                height: 175px;
+                width: 300px;
+                height: 210px;
+            }
+
+            .envelope-title {
+                font-size: 1.3rem;
             }
 
             .my-letter {
+                padding: 25px 20px;
+                max-width: 500px;
+            }
+
+            .back-button {
+                top: 15px;
+                left: 15px;
+                padding: 8px 16px;
+                font-size: 0.9rem;
+            }
+        }
+
+        /* 手机设备 */
+        @media (max-width: 768px) {
+            body {
+                padding-top: 0;
+            }
+
+            .main-container {
+                flex-direction: column;
+                padding: 15px 10px;
+                gap: 20px;
+                height: auto;
+                min-height: 100vh;
+                justify-content: flex-start;
+                align-items: center;
+                padding-top: 60px;
+            }
+
+            .envelope {
+                width: 280px;
+                height: 196px;
+                margin-bottom: 20px;
+            }
+
+            .envelope-title {
+                font-size: 1.1rem;
+                margin-bottom: 8px;
+            }
+
+            .my-letter {
+                width: 95%;
+                max-width: 400px;
                 padding: 20px 15px;
+                margin: 0;
             }
 
             .letter-header h2 {
-                font-size: 1.5rem;
+                font-size: 1.4rem;
+                margin-bottom: 15px;
             }
 
             .letter-body {
-                font-size: 0.85rem;
-                line-height: 1.5;
+                font-size: 0.9rem;
+                line-height: 1.6;
+            }
+
+            .letter-body p {
+                margin-bottom: 15px;
+                text-indent: 1.5em;
             }
 
             .signature {
                 font-size: 1rem;
+                margin-top: 20px;
             }
 
             .text-container {
                 max-height: none;
-                min-height: 60vh;
+                min-height: auto;
             }
 
             .decorative-hearts {
@@ -556,17 +610,47 @@
             }
 
             .like-hearts-container {
-                left: calc(50% - 40px);
-                width: 70px;
-                height: 70px;
+                left: calc(50% - 35px);
+                bottom: 15px;
+                width: 60px;
+                height: 60px;
             }
 
             .like-button {
-                font-size: 24px;
+                font-size: 20px;
             }
 
             .like-count {
-                font-size: 12px;
+                font-size: 11px;
+            }
+
+            .back-button {
+                top: 10px;
+                left: 10px;
+                padding: 6px 12px;
+                font-size: 0.8rem;
+            }
+
+            /* 图片模态框移动端优化 */
+            .image-modal .modal-content {
+                width: 95%;
+                max-width: none;
+                height: 80vh;
+                margin: 10vh auto;
+            }
+
+            .image-modal img {
+                max-width: 100%;
+                max-height: 70vh;
+                object-fit: contain;
+            }
+
+            .close-modal {
+                top: 10px;
+                right: 10px;
+                width: 35px;
+                height: 35px;
+                font-size: 20px;
             }
         }
 
