--- a/page4.html
+++ b/page4.html
@@ -238,8 +238,8 @@
             margin-bottom: 40px;
         }
 
-        .thanks-title {
-            font-size: 2rem;
+            .thanks-title {
+                font-size: 2rem;
             margin-bottom: 20px;
             font-family: 'Dancing Script', cursive;
             color: #2c3e50;
@@ -321,46 +321,200 @@
         }
 
         /* 响应式设计 */
+        
+        /* 平板设备 */
+        @media (max-width: 1024px) {
+            .back-btn {
+                top: 15px;
+                left: 15px;
+                padding: 8px 16px;
+                font-size: 0.9rem;
+            }
+
+            .container {
+                margin: 20px;
+                padding: 30px;
+            }
+
+            .left-section, .right-section {
+                padding: 25px;
+            }
+
+            .emma-title {
+                font-size: 2.5rem;
+            }
+
+            .thanks-title {
+                font-size: 1.8rem;
+            }
+
+            .contact-title {
+                font-size: 1.6rem;
+            }
+        }
+
+        /* 手机设备 */
         @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            .back-btn {
+                top: 10px;
+                left: 10px;
+                padding: 6px 12px;
+                font-size: 0.8rem;
+            }
+
             .container {
                 flex-direction: column;
+                margin: 10px 0;
+                padding: 20px;
+                min-height: auto;
             }
 
             .left-section {
                 border-right: none;
                 border-bottom: 2px solid rgba(139, 69, 19, 0.2);
-                padding: 30px 20px;
+                padding: 25px 15px;
+                text-align: center;
             }
 
             .right-section {
-                padding: 30px 20px;
+                padding: 25px 15px;
                 max-height: none;
             }
 
             .emma-title {
                 font-size: 2rem;
+                margin-bottom: 15px;
             }
 
             .emma-message {
                 font-size: 1rem;
+                line-height: 1.6;
+                margin-bottom: 20px;
             }
 
             .thanks-title {
                 font-size: 1.5rem;
+                margin-bottom: 15px;
             }
 
             .contact-title {
                 font-size: 1.3rem;
+                margin-bottom: 15px;
             }
 
             .contact-grid {
-                grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-                gap: 10px;
+                grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+                gap: 12px;
+                margin-bottom: 25px;
+            }
+
+            .contact-card {
+                padding: 12px;
+            }
+
+            .contact-icon {
+                font-size: 1.5rem;
             }
 
             .thanks-list {
                 grid-template-columns: 1fr;
+                gap: 12px;
+            }
+
+            .thanks-item {
+                padding: 12px;
+                font-size: 0.9rem;
+            }
+
+            .star-interaction-container {
+                width: 80px;
+                height: 80px;
+                margin: 15px auto;
+            }
+
+            .star-button {
+                font-size: 28px;
+            }
+
+            .star-count {
+                font-size: 11px;
+            }
+        }
+
+        /* 小屏手机 */
+        @media (max-width: 480px) {
+            body {
+                padding: 5px;
+            }
+
+            .container {
+                padding: 15px;
+                border-radius: 15px;
+            }
+
+            .left-section, .right-section {
+                padding: 15px 10px;
+            }
+
+            .emma-title {
+                font-size: 1.8rem;
+            }
+
+            .emma-message {
+                font-size: 0.9rem;
+            }
+
+            .thanks-title {
+                font-size: 1.3rem;
+            }
+
+            .contact-title {
+                font-size: 1.1rem;
+            }
+
+            .contact-grid {
+                grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
                 gap: 10px;
+            }
+
+            .contact-card {
+                padding: 10px;
+            }
+
+            .contact-icon {
+                font-size: 1.3rem;
+                margin-bottom: 4px;
+            }
+
+            .contact-card h4 {
+                font-size: 0.8rem;
+                margin-bottom: 4px;
+            }
+
+            .contact-placeholder {
+                font-size: 0.7rem;
+            }
+
+            .thanks-item {
+                padding: 10px;
+                font-size: 0.8rem;
+            }
+
+            .star-interaction-container {
+                width: 70px;
+                height: 70px;
+            }
+
+            .star-button {
+                font-size: 24px;
+            }
+
+            .star-count {
+                font-size: 10px;
             }
         }
 
@@ -401,8 +555,8 @@
                 </p>
                 <p class="emma-message">
                     感谢Emma教会了我什么是真正的友谊。
-                </p>
-                <div class="heart-animation">❤️</div>
+        </p>
+        <div class="heart-animation">❤️</div>
                 <p class="emma-message">
                     感谢Emma感谢Emma感谢Emma想不出来了
                 </p>
